Finish second button to fetch random pokemons available on the API. Fixed some css bugs and alignments

--- a/style.css
+++ b/style.css
@@ -61,9 +61,10 @@ input {
     margin: 20px 0;
     font-size: 1.2em;
     color: #333;
+    text-align:left;
 }
 
-#selectButton {
+#buttonRandomFetch {
     padding: 10px 20px;
     font-size: 1em;
     cursor: pointer;
